[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader = "0.2.7"
chrono = "0.4.26"
csv = "1.2.2"
zip = "0.5"
zip-extensions = "0.6"
serde = { version = "1.0.188", features = ["derive"] }
